# QtDroidBuilder

./: README.md  build-qt-android.sh
.github/workflows/: build-apk.yml
templates/: AndroidManifest.xml  CMakeLists.txt  Dockerfile  android-libwebviewapp.so-deployment-settings.json  build.sh  main.cpp  main.qml
